[gd_scene load_steps=5 format=3 uid="uid://cecnh4vwgvote"]

[ext_resource type="Script" path="res://Scenes/projectile.gd" id="1_x1y5w"]
[ext_resource type="Texture2D" uid="uid://3fxbamvqcvtr" path="res://Assets/fireball1.png" id="2_18ocw"]
[ext_resource type="PackedScene" uid="uid://xvpy6tqw0myo" path="res://Scenes/components/killzone_component.tscn" id="3_x3rua"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vinjv"]
radius = 7.5

[node name="Projectile" type="CharacterBody2D" node_paths=PackedStringArray("killzone_component", "ttl_timer")]
script = ExtResource("1_x1y5w")
killzone_component = NodePath("KillzoneComponent")
ttl_timer = NodePath("TimeToLive")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_vinjv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.191966, 0.189213)
texture = ExtResource("2_18ocw")

[node name="KillzoneComponent" parent="." instance=ExtResource("3_x3rua")]

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
